--- a/doc/einleitung.tex
+++ b/doc/einleitung.tex
@@ -41,7 +41,7 @@ Da gewährleistet werden soll, dass vergebene Tastenkürzel auf allen relevanten
 \subsection{Schnittstellen}
 \label{schnittstellen} 
 
-Um herauszufinden, welche Shortcuts die verschiedenen Browser auf unterschiedlichen Betriebssystemen verwenden, wurde außerhalb dieser Abschlussarbeit eine Testanwendung implementiert. Diese läuft auf verschiedenen Betriebssystemen (z. B. Windows, Linux und MacOS) und testet alle möglichen Shortcut-Kombinationen für die verbreitetsten Browser (z. B. Chrome, Firefox oder Safari). Das Ergebnis dieser Tests wird in Form von XML-Dateien gespeichert (Beispiel siehe Anhang \ref{xml}). Für jede Browser-Betriebssystem-Kombination existiert eine eigene Datei, in welcher alle problembehafteten Shortcuts verzeichnet sind.
+Um herauszufinden, welche Shortcuts die verschiedenen Browser auf unterschiedlichen Betriebssystemen verwenden, wurde außerhalb dieser Abschlussarbeit eine Testanwendung implementiert. Diese kann auf verschiedenen Betriebssystemen (z. B. Windows, Linux und MacOS) ausgeführt werden und testet alle möglichen Shortcut-Kombinationen für die verbreitetsten Browser (z. B. Chrome, Firefox oder Safari). Das Ergebnis dieser Tests wird in Form von XML-Dateien gespeichert (Beispiel siehe Anhang \ref{xml}). Für jede Browser-Betriebssystem-Kombination existiert eine eigene Datei, in welcher alle problembehafteten Shortcuts verzeichnet sind.
 
 Damit die in den Dateien enthaltenen Informationen dem Benutzer dargestellt werden können, muss der Editor das Einlesen und Verarbeiten von XML-Strukturen beherrschen. Hierfür kommt das hauseigene \emph{Propertly} Framework zum Einsatz. Dieses kümmert sich um sämtliche XML-spezifische Arbeiten und ermöglicht so eine komfortable Nutzung.
 
