--- a/doc/glossar.tex
+++ b/doc/glossar.tex
@@ -12,13 +12,13 @@
 	  	auch die Businesslogik des Clients entworfen werden kann. \\
 	  	Webclient &
 	  	Der Webclient ist eine Neuerung von ADITO5, welche mit Hilfe von Vaadin in Java entwickelt wurde. Er stellt eine Web-Applikation dar, welche die gleichen Bedienmöglichkeiten wie der bisherige Client bietet. \\
+	  	Entity / Entität &
+	  	Eine Entität entspricht im ADITO Kontext einer Dateneinheit, welche Attribute, Aktionen und weitere Entitäten besitzten kann. \\
 	  	GUI / UI &
 	  	Ein (Grapic) User Interface ist eine grafische Benutzeroberfläche oder auch grafische Benutzerschnittstelle. Sie hat die Aufgabe Anwendungssoftware mittels grafischer Symbole und Steuerelementen bedienbar zu machen. \\
 	  	Java Swing &
 	  	Swing ist ein GUI-Toolkit von Sun Microsystems. Sie stellt eine Sammlung von Bibliotheken zur Entwicklung grafischer Benutzerschnittstellen. Diese Umfassen Standardkomponenten wie z. B. Buttons, Tabellen oder Textfelder. \\
-	  	
 	  	Look and Feel &
-	  	Das Look and Feel beschreibt das Aussehen und die Handhabung der Software. Dazu gehört beispielsweise die Wahl von Farben, das Layout von grafischen Elementen sowie ihre Reaktion auf Benutzereingaben.
-	  	 \\
+	  	Das Look and Feel beschreibt das Aussehen und die Handhabung der Software. Dazu gehört beispielsweise die Wahl von Farben, das Layout von grafischen Elementen sowie ihre Reaktion auf Benutzereingaben. \\
 	\end{tabularx}
 \end{center}
